# gitclub

./: Cargo.toml  README.md
doc/: 设计.md
migrations/: 001_init.sql  002_user_profile.sql  003_add_owners.sql
src/: api.rs  assets.rs  auth.rs  config.rs  db.rs  git_http.rs  main.rs  scanner.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  style.css
web/src/components/: CreateModal.vue  FileBrowser.vue  FileBrowserNode.vue  FileViewer.vue  GroupDetail.vue  Login.vue  MemberManagement.vue  Register.vue  RepoDetail.vue  TagsView.vue  TreeNode.vue  UserProfile.vue
