[package]
name = "gitclub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ini = { package = "rust-ini", version = "0.21" }
rust-embed = "8.0"
mime_guess = "2.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
http-body-util = "0.1"
bytes = "1.0"
urlencoding = "2.1"
flate2 = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["cookie"] }
tower-cookies = "0.10"
time = "0.3"
base64 = "0.22"
